# flax-mup

./: LICENSE  README.md  main.py  pyproject.toml
examples/convnet/: main_convnet.py
examples/dist_mlp/: mse.py
examples/gaussian_mlp/: gaussian_mlp.py
examples/mlp/: main.py  main_affine.py
examples/mnist_mlp/: haiku_main.py  main.py
examples/vae/: main_vae.py
flax_mup/: __init__.py  coord_check.py  module.py  mup.py
