[tool.poetry]
name = "flax-mup"
version = "0.1.6"
description = "A simple port of μP  to Flax/JAX."
authors = ["Gershom Agim <gershom.agim@zf.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
jax = ">=0.3.7"
flax = ">=0.6.0"
optax = ">=0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
